feat: add proto navbar

--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,25 @@
 
 <head>
 	<meta charset="utf-8" />
-	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width" />
+
+	<link rel="preconnect" href="https://cdnjs.cloudflare.com">
+	<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="dns-prefetch" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link rel="dns-prefetch" href="https://fonts.gstatic.com" crossorigin>
+
+	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+
+	<link rel='stylesheet'
+		href='https://cdnjs.cloudflare.com/ajax/libs/reseter.css/2.0.0/reseter.min.css'
+		integrity='sha512-gCJkkUMGTe73+FMwog6gIBCVJIMXRoc21l6/IPCuzxCex/1sxvO8ctb6Zd4/WWs2UMqmtnDrAdhJht5pEY0LXg=='
+		crossorigin='anonymous' />
+	<link
+		href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@400;700&family=Mitr:wght@400;700&display=swap"
+		rel="stylesheet">
+
 	%sveltekit.head%
 </head>
 
