--- a/src/app.html
+++ b/src/app.html
@@ -19,7 +19,7 @@
 		integrity='sha512-gCJkkUMGTe73+FMwog6gIBCVJIMXRoc21l6/IPCuzxCex/1sxvO8ctb6Zd4/WWs2UMqmtnDrAdhJht5pEY0LXg=='
 		crossorigin='anonymous' />
 	<link
-		href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@400;500;700&family=Mitr:wght@400;700&display=swap"
+		href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@400;500;700&family=Mitr:wght@400;500;700&display=swap"
 		rel="stylesheet">
 
 	%sveltekit.head%
