--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th">
 
 <head>
 	<meta charset="utf-8" />
@@ -14,10 +14,6 @@
 
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 
-	<link rel='stylesheet'
-		href='https://cdnjs.cloudflare.com/ajax/libs/reseter.css/2.0.0/reseter.min.css'
-		integrity='sha512-gCJkkUMGTe73+FMwog6gIBCVJIMXRoc21l6/IPCuzxCex/1sxvO8ctb6Zd4/WWs2UMqmtnDrAdhJht5pEY0LXg=='
-		crossorigin='anonymous' />
 	<link
 		href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@400;500;700&family=Mitr:wght@400;500;700&display=swap"
 		rel="stylesheet">
