--- a/src/app.html
+++ b/src/app.html
@@ -14,6 +14,8 @@
 
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 
+	<!-- TODO - เพิ่ม Favicon & OG -->
+
 	<link
 		href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@400;500;700&family=Mitr:wght@400;500;700&display=swap"
 		rel="stylesheet">
