--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,24 @@
 
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 
-	<!-- TODO - เพิ่ม Favicon & OG -->
+	<meta name="description"
+		content="อยากเห็นโรงเรียนของพวกเราเปลี่ยนไปในทางที่ดีขึ้นไหม?">
+
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="https://sparkling-custard-884dae.netlify.app/">
+	<meta property="og:type" content="website">
+	<meta property="og:description"
+		content="อยากเห็นโรงเรียนของพวกเราเปลี่ยนไปในทางที่ดีขึ้นไหม?">
+	<meta property="og:image" content="https://sparkling-custard-884dae.netlify.app/og.png">
+
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="sparkling-custard-884dae.netlify.app">
+	<meta property="twitter:url" content="https://sparkling-custard-884dae.netlify.app/">
+	<meta name="twitter:description"
+		content="อยากเห็นโรงเรียนของพวกเราเปลี่ยนไปในทางที่ดีขึ้นไหม?">
+	<meta name="twitter:image"
+		content="https://sparkling-custard-884dae.netlify.app/og.png">
 
 	<link
 		href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@400;500;700&family=Mitr:wght@400;500;700&display=swap"
