fix: update og text

--- a/src/app.html
+++ b/src/app.html
@@ -20,22 +20,25 @@
 	<meta name="msapplication-TileColor" content="#3c55ab">
 	<meta name="theme-color" content="#3c55ab">
 
+	<title>โปร่งใสวิทยาคม</title>
 	<meta name="description"
-		content="อยากเห็นโรงเรียนของพวกเราเปลี่ยนไปในทางที่ดีขึ้นไหม?">
+		content="อยากเห็นโรงเรียนของพวกเรา เปลี่ยนไปในทางที่ดีขึ้นมั้ย? #โปร่งใสวิทยาคม ชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
 
 	<!-- Facebook Meta Tags -->
 	<meta property="og:url" content="https://sparkling-custard-884dae.netlify.app/">
 	<meta property="og:type" content="website">
+	<meta property="og:title" content="โปร่งใสวิทยาคม">
 	<meta property="og:description"
-		content="อยากเห็นโรงเรียนของพวกเราเปลี่ยนไปในทางที่ดีขึ้นไหม?">
+		content="อยากเห็นโรงเรียนของพวกเรา เปลี่ยนไปในทางที่ดีขึ้นมั้ย? #โปร่งใสวิทยาคม ชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
 	<meta property="og:image" content="https://sparkling-custard-884dae.netlify.app/og.png">
 
 	<!-- Twitter Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta property="twitter:domain" content="sparkling-custard-884dae.netlify.app">
 	<meta property="twitter:url" content="https://sparkling-custard-884dae.netlify.app/">
+	<meta name="twitter:title" content="โปร่งใสวิทยาคม">
 	<meta name="twitter:description"
-		content="อยากเห็นโรงเรียนของพวกเราเปลี่ยนไปในทางที่ดีขึ้นไหม?">
+		content="อยากเห็นโรงเรียนของพวกเรา เปลี่ยนไปในทางที่ดีขึ้นมั้ย? #โปร่งใสวิทยาคม ชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
 	<meta name="twitter:image"
 		content="https://sparkling-custard-884dae.netlify.app/og.png">
 
