fix: edit og text

--- a/src/app.html
+++ b/src/app.html
@@ -22,14 +22,14 @@
 
 	<title>โปร่งใสวิทยาคม</title>
 	<meta name="description"
-		content="อยากเห็นโรงเรียนของพวกเรา เปลี่ยนไปในทางที่ดีขึ้นมั้ย? #โปร่งใสวิทยาคม ชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
+		content="ขอชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
 
 	<!-- Facebook Meta Tags -->
 	<meta property="og:url" content="http://schoolgov.actai.co/">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="โปร่งใสวิทยาคม">
 	<meta property="og:description"
-		content="อยากเห็นโรงเรียนของพวกเรา เปลี่ยนไปในทางที่ดีขึ้นมั้ย? #โปร่งใสวิทยาคม ชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
+		content="ขอชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
 	<meta property="og:image" content="http://schoolgov.actai.co/og.png">
 
 	<!-- Twitter Meta Tags -->
@@ -38,7 +38,7 @@
 	<meta property="twitter:url" content="http://schoolgov.actai.co/">
 	<meta name="twitter:title" content="โปร่งใสวิทยาคม">
 	<meta name="twitter:description"
-		content="อยากเห็นโรงเรียนของพวกเรา เปลี่ยนไปในทางที่ดีขึ้นมั้ย? #โปร่งใสวิทยาคม ชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
+		content="ขอชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
 	<meta name="twitter:image" content="http://schoolgov.actai.co/og.png">
 
 	%sveltekit.head%
