fix: update name and logo

--- a/src/app.html
+++ b/src/app.html
@@ -5,11 +5,14 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+	<title>โรงเรียนโปร่งใส</title>
+
 	<link rel="preconnect" href="https://cdnjs.cloudflare.com">
-	<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="dns-prefetch" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+	<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+	<link rel="dns-prefetch" href="https://fonts.googleapis.com">
 	<link rel="dns-prefetch" href="https://fonts.gstatic.com" crossorigin>
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -20,14 +23,13 @@
 	<meta name="msapplication-TileColor" content="#3c55ab">
 	<meta name="theme-color" content="#3c55ab">
 
-	<title>โปร่งใสวิทยาคม</title>
 	<meta name="description"
 		content="ขอชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
 
 	<!-- Facebook Meta Tags -->
 	<meta property="og:url" content="http://schoolgov.actai.co/">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="โปร่งใสวิทยาคม">
+	<meta property="og:title" content="โรงเรียนโปร่งใส">
 	<meta property="og:description"
 		content="ขอชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
 	<meta property="og:image" content="http://schoolgov.actai.co/og.png">
@@ -36,7 +38,7 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta property="twitter:domain" content="schoolgov.actai.co">
 	<meta property="twitter:url" content="http://schoolgov.actai.co/">
-	<meta name="twitter:title" content="โปร่งใสวิทยาคม">
+	<meta name="twitter:title" content="โรงเรียนโปร่งใส">
 	<meta name="twitter:description"
 		content="ขอชวนทุกคนมาแลกเปลี่ยน เพื่อพัฒนาโรงเรียนไปด้วยกัน">
 	<meta name="twitter:image" content="http://schoolgov.actai.co/og.png">
